<resources>
    <string name="app_name">Plantanist</string>
    <string name="title_scan">Scan</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="title_login">Login</string>
    <string name="default_web_client_id">656338336155-9jlh5ehtviqdg9a9396tf9ielaoskb90.apps.googleusercontent.com</string>
    <string name="text_login">Welcome to Plantanist</string>
    <string name="title_logout">Logout</string>
    <string name="title_detail">Detail</string>
    <string name="text_confidence">Confidence</string>
    <string name="text_plant">Plant</string>
    <string name="text_disease">Disease</string>
    <string name="text_description">Description</string>
    <string name="scan_image">Scan</string>
    <string name="gallery">Gallery</string>
    <string name="capture">Capture</string>
</resources>